checkstyle added to makefile, fixes to be made to Matrix.java

--- a/src/makefile
+++ b/src/makefile
@@ -4,6 +4,11 @@
 
 JUNIT5_JAR = junit-platform-console-standalone-1.2.0.jar 
 JUNIT5_RUNNER = org.junit.platform.console.ConsoleLauncher
+# Enable this for checking on student2
+CKSTYLE_COMMAND =  -jar /usr/local/checkstyle-5.5/checkstyle-5.5-all.jar
+# Enable this for local check, remember to pull jar to src dir
+CKSTYLE_COMMAND_LOCAL =  -jar checkstyle-5.5-all.jar
+CKSTYLE_XML = cs_appstate_checks.xml
 
 default: 
 	@echo "usage: make target"
@@ -14,6 +19,8 @@ default:
 #	@echo "________ make clean ; make compile ; make test ; make defchk"
 	@echo "example: make compile"
 	@echo "example: make test"
+	@echo "example: make check"
+	@echo "example: make checklocal"
 	@echo "example: make clean"
 
 # makefile syntax
@@ -33,6 +40,12 @@ clean:
 	rm -f Matrix*.class
 	rm -f matrix/Matrix*.class
  
+check: matrix/Matrix.java $(CKSTYLE_XML)
+	java $(CKSTYLE_COMMAND) -c $(CKSTYLE_XML) matrix/Matrix.java
+
+checklocal: matrix/Matrix.java $(CKSTYLE_XML)
+	java $(CKSTYLE_COMMAND_LOCAL) -c $(CKSTYLE_XML) matrix/Matrix.java
+
 # help:
 # 	@echo "Just starting with make? Try these 4 make commands successively:"
 # 	@echo "________ make clean ; make compile ; make test ; make defchk"
